<resources>
    <string name="app_name">Sonovin</string>
    <string name="app_name_splash">Welcome...</string>

    <string name="content_descripcion">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">  Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>

    <string name="create_an_account">CREATE AN ACCOUNT</string>

    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>

    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u>Terms &amp; Condition</u></string>
    <string name="btn_lbl_register">Register</string>

    <string name="alredy_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>

    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match </string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition</string>
    <string name="registery_successfull">Thanks for registering!</string>

    <string name="please_wait">Please Wait</string>

    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your username and e-mail address we\'ll send you an email to reset your password</string>
    <string name="btn_lbl_submit">Submit</string>

    <string name="email_sent_success">"Email sent successfully to reset your password! \"</string>
    <string name="register_success">You are registered successfully</string>

    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="title_edit_profile">EDIT PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>

    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also a  it from settings</string>

    <string name="image_selection_failed">Image selection Failed!</string>

    <string name="err_msg_enter_mobile_number">Please enter mobile number</string>

    <string name="msg_profile_update_success">Your profile is updated successfully</string>

    <!--    <string name="title_activity_dashboard">MainActivity</string> -->
    <string name="title_home">Home</string>
    <string name="title_clien_host">ClienHost</string>
    <string name="title_notifications">Notifications</string>


    <string name="please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="action_settings">Settings</string>

    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>

    <string name="soluc_tecnolo">Soluciones Tecnológicas</string>

    <string name="mensaj">Mensajes</string>
    <string name="nota">Notas</string>
    <string name="caduci">Caducidad</string>
    <string name="favori">Favorito</string>
    <string name="client">Cliente</string>

    <string name="closeToogle">close toogle</string>
    <string name="openToogle">open toogle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_client">Lista de clientes</string>
    <string name="all">TODO</string>

    <string name="description">Ori and the Will of the Wisps es un videojuego del género aventura-plataforma y Metroidvania desarrollado por Moon Studios y publicado por Xbox Game Studios para Microsoft Windows, Xbox One y Nintendo Switch. Es una continuación del título de 2015 Ori and the Blind Forest y fue anunciado durante el E3 2017.</string>


    <string name="msn_enviado">Msn Enviado</string>
    <string name="msn_no_enviado">Msn No Enviado</string>


</resources>